--- a/src/components/menu-item/menu-item.styles.scss
+++ b/src/components/menu-item/menu-item.styles.scss
@@ -6,8 +6,7 @@
   align-items: center;
   justify-content: center;
   margin: 0 7.5px 15px;
-  background-position: center;
-  background-size: cover;
+  overflow: hidden;
 
   &.large {
     height: 350px;
@@ -21,6 +20,26 @@
     margin-left: 7.5px;
   }
 
+  &:hover {
+    cursor: pointer;
+
+    & .content {
+      background-color: rgb(255, 255, 255);
+    }
+
+    & .background-image {
+      transform: scale(1.05);
+      transition: transform 1s ease-in-out;
+    }
+  }
+
+  .background-image {
+    height: 100%;
+    width: 100%;
+    background-position: center;
+    background-size: cover;
+  }
+
   .content {
     height: auto;
     padding: 5px 25px;
@@ -30,7 +49,7 @@
     justify-content: center;
     border-radius: 6px;
     background-color: rgba(255, 255, 255, 0.6);
-    transition: background-color 0.5s;
+    position: absolute;
 
     .title {
       font-weight: bold;
@@ -43,11 +62,6 @@
     .subtitle {
       font-weight: light;
       font-size: 16px;
-    }
-
-    &:hover {
-      cursor: pointer;
-      background-color: rgb(255, 255, 255);
     }
   }
 }
