--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,11 @@
 body {
+  margin: 0;
+  font-family: "Dosis", sans-serif;
+  height: 100vh;
   padding: 20px 60px;
+}
+
+a {
+  text-decoration: none;
+  color: black;
 }
