--- a/src/components/directory/directory.styles.scss
+++ b/src/components/directory/directory.styles.scss
@@ -1,6 +1,7 @@
 .directory-menu {
-  width: 100%;
   display: flex;
   flex-wrap: wrap;
+  height: 100%;
   justify-content: space-between;
+  width: 100%;
 }
