--- a/src/components/header/header.styles.scss
+++ b/src/components/header/header.styles.scss
@@ -14,14 +14,15 @@
   }
 
   .navbar {
+    align-items: center;
     display: flex;
     font-size: 20px;
     font-weight: normal;
-    justify-content: flex-end;
+    justify-content: space-between;
     width: 50%;
 
     .nav-item {
-      padding-left: 2rem;
+      // padding-left: 1.5rem;
       text-transform: uppercase;
     }
 
