--- a/src/components/cart-dropdown/cart-dropdown.styles.scss
+++ b/src/components/cart-dropdown/cart-dropdown.styles.scss
@@ -16,6 +16,11 @@
     display: flex;
     flex-direction: column;
     overflow-y: auto;
+
+    .empty-message {
+      font-size: 18px;
+      margin: auto;
+    }
   }
 
   button {
