--- a/src/components/collection-item/collection-item.styles.scss
+++ b/src/components/collection-item/collection-item.styles.scss
@@ -3,8 +3,9 @@
   display: flex;
   flex-direction: column;
   height: 350px;
-  width: 22%;
+  width: 22vw;
   position: relative;
+  margin: 0 5px;
 
   .image {
     width: 100%;
@@ -37,12 +38,12 @@
     font-size: 18px;
 
     .name {
-      width: 90%;
+      width: auto;
       margin-bottom: 15px;
     }
 
     .price {
-      width: 10%;
+      width: auto;
     }
   }
 }
