--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,8 @@
 body {
   margin: 0;
   font-family: "Dosis", sans-serif;
-  height: 100vh;
-  padding: 20px 60px;
+  min-height: 100vh;
+  padding: 0 60px;
 }
 
 a {
