--- a/src/components/collection-item/collection-item.styles.scss
+++ b/src/components/collection-item/collection-item.styles.scss
@@ -15,6 +15,11 @@
     margin-bottom: 5px;
   }
 
+  .location {
+    background-size: contain;
+    background-repeat: no-repeat;
+  }
+
   .custom-button {
     position: absolute;
     bottom: 10%;
@@ -34,8 +39,9 @@
     width: 100%;
     height: 5%;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     font-size: 18px;
+    // padding: 0 10%;
 
     .name {
       width: auto;
