--- a/src/pages/checkout-page/checkout-page.styles.scss
+++ b/src/pages/checkout-page/checkout-page.styles.scss
@@ -28,4 +28,13 @@
     margin-left: auto;
     font-size: 36px;
   }
+  button {
+    margin: 30px;
+    margin-left: auto;
+  }
+  .test-warning {
+    color: red;
+    font-weight: normal;
+    text-align: center;
+  }
 }
